Small bugs fixed with overflow in cart and error text in OrderDetails

--- a/src/pages/HomePage/components/Cart/Cart.scss
+++ b/src/pages/HomePage/components/Cart/Cart.scss
@@ -1,8 +1,6 @@
 @import '../../../../variables';
 
 .cart {
-  overflow: scroll;
-
   .cart-header {
     display: flex;
     justify-content: space-between;
